plugins {
    id 'java'
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'application'
}

// The main class that will be executed when you do 'gradle run'
application {
    mainClass = 'examples.ChimpIO'
}

// e.g., run with:
// gradle run -Dexec.args="domains/ordered_domain.ddl problems/test_m_serve_coffee_problem_1.pdl"
run {    
  systemProperties System.getProperties()
  if(System.getProperty("exec.args") != null) {
    args System.getProperty("exec.args").split()
  }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {

  mavenCentral()
  mavenLocal()

}

//version = '0.0.0-SNAPSHOT'
version = ''
group = 'chimp'

dependencies {

  implementation group: 'org.metacsp', name: 'meta-csp-framework', version: '1.3.5'
  //compile 'org.metacsp:meta-csp-framework:0.0.0-SNAPSHOT'

  implementation group: 'info.picocli', name: 'picocli', version: '4.7.7'

  implementation group: 'com.google.guava', name: 'guava', version: '33.4.0-jre'

  implementation group: 'org.choco-solver', name: 'choco-solver', version: '4.10.14'

  // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
  implementation group: 'org.antlr', name: 'antlr4-runtime', version: '4.13.2'

  // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
  implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.17.3'

    //compile 'net.sf.jung:jung2:2.0.1'
  api 'net.sf.jung:jung-graph-impl:2.0.1'
  api 'net.sf.jung:jung-algorithms:2.0.1'
  api 'net.sf.jung:jung-visualization:2.0.1'

  testImplementation 'junit:junit:4.13.2'
}


task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'examples.ChimpIO'
    }
    archiveClassifier = 'fat'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

